# motor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: camera.cpp  component.cpp  componentholder.cpp  console.cpp  cursor.cpp  display.cpp  event.cpp  events.cpp  game.cpp  gameobject.cpp  getriebe.cpp  log.cpp  main.cpp  motor.cpp  paths.cpp  registries.cpp  renderer.cpp  resourcelocation.cpp  scale.cpp  scene.cpp  testmoving.h  transform.cpp  vector.cpp
src/discord/: achievement_manager.cpp  activity_manager.cpp  application_manager.cpp  core.cpp  image_manager.cpp  lobby_manager.cpp  network_manager.cpp  overlay_manager.cpp  relationship_manager.cpp  storage_manager.cpp  store_manager.cpp  types.cpp  user_manager.cpp  voice_manager.cpp
src/motor/: ansi.hpp  classdef.hpp  discord.hpp  event.hpp  events.hpp  game.hpp  getriebe.hpp  internal.hpp  log.hpp  makros.hpp  motor.hpp  paths.hpp  util.hpp
src/motor/components/: collider.hpp  empty.hpp  form.hpp  lightcollider.hpp  orbit.hpp  phy.hpp  revolution.hpp  sprite.hpp  text.hpp  transform.hpp
src/motor/console/: console.hpp
src/motor/content/: content.hpp  font.hpp  music.hpp  resourcelocation.hpp  sound.hpp  texture.hpp  textureatlas.hpp
src/motor/gameobjects/: debugtext.hpp  keylistener.hpp
src/motor/interfaces/: component.hpp  eventlistener.hpp
src/motor/light/: scenelight.hpp
src/motor/object/: camera.hpp  canvas.hpp  componentholder.hpp  cursor.hpp  dataObject.hpp  display.hpp  family.hpp  gameobject.hpp  renderer.hpp  scene.hpp  tagObject.hpp  text.hpp
src/motor/os/: linux.hpp
src/motor/registry/: keyable.hpp  mod.hpp  registries.hpp  registry.hpp  registryobject.hpp
src/motor/sound/: sound.hpp  sound_deprecated.hpp
src/motor/types/: color.hpp  ling.hpp  rotation.hpp  scale.hpp  vector.hpp
